#5216: Fixed menu vert drop by reducing search form size on smaller screens.

--- a/docs/sites/all/themes/ssd/sass/mobile.scss
+++ b/docs/sites/all/themes/ssd/sass/mobile.scss
@@ -59,6 +59,18 @@
   #playlist-controller.expanded {
     width: 100%;
   }
-
 }
 
+/* Shrink navbar search input as screen gets smaller */
+@media (max-width: 380px) {
+  #navbar #search-form--2 #edit-keys--2,
+  #navbar #search-form #edit-keys {
+    width: 80px;
+  }
+}
+@media (max-width: 320px) {
+  #navbar #search-form--2 #edit-keys--2,
+  #navbar #search-form #edit-keys {
+    width: 50px;
+  }
+}
